Fix send-email helper details color in dark mode
The collapsed summary color was low contrast, and the expanded summary
color was almost invisible (black on dark gray). There currently is no
uncolored text inside a details tag, but such text would also have been
black.

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -296,6 +296,18 @@ img {
     li {
       margin-top: 1rem;
     }
+
+    @media(prefers-color-scheme: dark) {
+      color: $gray-500;
+
+      &[open] {
+        color: $gray-100;
+
+        summary {
+          color: $gray-100;
+        }
+      }
+    }
   }
 
   .event-list {
